edfu: ensure new window link for images is clickable (z-index)

--- a/Projects/edfu/Resources/edfu.scss
+++ b/Projects/edfu/Resources/edfu.scss
@@ -299,6 +299,7 @@ $linkcolor: #00247d;
 			position: absolute;
 			top: 8px;
 			right: 8px;
+			z-index: 1000;
 			color: #fff;
 			font-size: 18px;
 			text-shadow: rgba(0, 0, 0, 0.5) 1px 1px 2px;
